Check in config changes

--- a/config/places-service.yml
+++ b/config/places-service.yml
@@ -2,6 +2,10 @@ google:
   service:
     apiKey: AIzaSyCJNAAvyohMMJ8lWDFnQxKtumpJB-7idvE  
 
+---
+spring:
+  profiles: development
+
 server:
    port: 8083
    
