--- a/dealer-service/build.gradle
+++ b/dealer-service/build.gradle
@@ -20,7 +20,7 @@ apply plugin: 'spring-boot'
 apply plugin: 'io.spring.dependency-management' 
 
 jar {
-    baseName = 'DealerService'
+    baseName = 'dealer-service'
     version = '0.0.1-SNAPSHOT'
 }
 
