--- a/gas-price-service/src/main/resources/application.yml
+++ b/gas-price-service/src/main/resources/application.yml
@@ -1,17 +1,7 @@
-#eureka:
-#  client:
-#    serviceUrl:
-#      defaultZone: ${vcap.services.eureka-service.credentials.uri:http://127.0.0.1:8761}/eureka/
-
 spring:
   application:
-    name: ${vcap.application.name:GasPriceService}
+    name: ${vcap.application.name:gas-price-service}
 
 security:
   basic:
     enabled: false
-    
-#eureka:
-#  instance:
-#    hostname: ${vcap.application.uris[0]}
-#    nonSecurePort: 80
