--- a/auto-simulator/build.gradle
+++ b/auto-simulator/build.gradle
@@ -20,7 +20,7 @@ apply plugin: 'spring-boot'
 apply plugin: 'io.spring.dependency-management' 
 
 jar {
-    baseName = 'VehicleSimulator'
+    baseName = 'auto-simulator'
     version = '0.0.1-SNAPSHOT'
 }
 
