--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,7 @@
 ---
 applications:
 - name: dealer-service
-  memory: 768MB 
+  memory: 512MB 
   instances: 1
   host: dealer-service-${random-word}
   path: ./dealer-service/build/libs/dealer-service-0.0.1-SNAPSHOT.jar
@@ -11,7 +11,7 @@ applications:
   - config-server
 
 - name: gas-price-service
-  memory: 768MB 
+  memory: 512MB 
   instances: 1
   host: gas-price-service-${random-word}
   path: ./gas-price-service/build/libs/gas-price-service-0.0.1-SNAPSHOT.jar
@@ -21,7 +21,7 @@ applications:
   - config-server
 
 - name: places-service
-  memory: 768MB 
+  memory: 512MB 
   instances: 1
   host: places-service-${random-word}
   path: ./places-service/build/libs/places-service-0.0.1-SNAPSHOT.jar
@@ -29,4 +29,27 @@ applications:
   services:
   - service-registry
   - config-server
+
+- name: repair-service
+  memory: 768MB
+  instances: 1
+  host: repair-service-${random-word}
+  path: ./repair-service/build/libs/repair-service-0.0.1-SNAPSHOT.jar
+  timeout: 180
+  services:
+  - service-registry
+  - config-server
+
+- name: auto-simulator 
+  memory: 512MB 
+  instances: 1
+  host: auto-simulator-${random-word}
+  path: ./auto-simulator/build/libs/auto-simulator-0.0.1-SNAPSHOT.jar
+  timeout: 180
+  services:
+#  - vehicle-data-queue
+  - service-registry
+  - config-server
+  env:
+    SPRING_PROFILES_ACTIVE: configServer
 
