--- a/auto-simulator/build.gradle
+++ b/auto-simulator/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '1.3.0.M5'
+        springBootVersion = '1.2.6.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -9,7 +9,7 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") 
-        classpath("io.spring.gradle:dependency-management-plugin:0.5.2.RELEASE")
+        classpath("io.spring.gradle:dependency-management-plugin:0.5.3.RELEASE")
     }
 }
 
@@ -26,54 +26,35 @@ jar {
 
 dependencyManagement {
 	imports {
-	  mavenBom 'org.springframework.cloud:spring-cloud-starter-parent:Brixton.M1'
-	  mavenBom "io.pivotal.spring.cloud:spring-cloud-services-starter-parent:1.0.0.BUILD-SNAPSHOT"
+	  mavenBom "io.pivotal.spring.cloud:spring-cloud-services-starter-parent:1.0.2.RELEASE"
 	}
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
 repositories {
     mavenCentral()
-	maven {
-		url 'http://repo.spring.io/milestone'
-	}
-	maven {
-		url 'http://repo.spring.io/snapshot'
-	}
-	maven {
-		url "https://repo.spring.io/libs-snapshot"
-	}
+	maven { url 'http://repo.spring.io/milestone' }
+	maven { url 'http://repo.spring.io/snapshot' }
+	maven { url "https://repo.spring.io/libs-snapshot" }
 }
 
 
 dependencies {
-    compile("org.springframework.cloud:spring-cloud-starter-feign")
-    compile("org.springframework.cloud:spring-cloud-starter-hystrix")
-    compile("org.springframework.cloud:spring-cloud-starter-hystrix-dashboard")
-    compile("org.springframework.boot:spring-boot-starter-data-jpa")
-    compile("org.springframework.boot:spring-boot-starter-web")
+	
+	compile("org.springframework.boot:spring-boot-starter-web")
 	compile("org.springframework.boot:spring-boot-starter-actuator")
-	compile("org.springframework.amqp:spring-rabbit:1.4.5.RELEASE")
 	compile("io.pivotal.spring.cloud:spring-cloud-services-starter-config-client")
 	compile("io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry")
+	compile("io.pivotal.spring.cloud:spring-cloud-services-starter-circuit-breaker")
+	compile("org.springframework.amqp:spring-rabbit:1.4.5.RELEASE")
+	compile("org.springframework.cloud:spring-cloud-starter-feign")
 	compile("com.google.code.gson:gson:2.3.1")
-	
-    runtime("com.h2database:h2")
-    runtime("mysql:mysql-connector-java")
-    testCompile("org.springframework.boot:spring-boot-starter-test") 
+	testCompile("org.springframework.boot:spring-boot-starter-test")
+
 }
-
-
 
 eclipse {
     classpath {
          containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
          containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
     }
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '2.3'
 }
