--- a/zipkin-server/build.gradle
+++ b/zipkin-server/build.gradle
@@ -1,54 +1,47 @@
 buildscript {
-    ext {
-        springBootVersion = '1.2.6.RELEASE'
-    }
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") 
-        classpath("io.spring.gradle:dependency-management-plugin:0.5.3.RELEASE")
-    }
+	ext {
+		springBootVersion = '1.3.5.RELEASE'
+	}
+	repositories {
+		mavenCentral()
+	}
+	dependencies {
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") 
+	}
 }
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
-apply plugin: 'idea'
 apply plugin: 'spring-boot' 
-apply plugin: 'io.spring.dependency-management' 
 
 jar {
-    baseName = 'zipkin-server'
-    version = '0.0.1-SNAPSHOT'
+	baseName = 'demo'
+	version = '0.0.1-SNAPSHOT'
 }
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+	mavenCentral()
 }
 
 
 dependencies {
-    compile("org.springframework.cloud:spring-cloud-sleuth-zipkin-stream")
-	compile("io.zipkin.java:zipkin-autoconfigure-ui")
-    testCompile("org.springframework.boot:spring-boot-starter-test") 
+	compile('org.springframework.boot:spring-boot-starter')
+	compile('io.zipkin.java:zipkin-server')
+	testCompile('org.springframework.boot:spring-boot-starter-test') 
 }
 
 dependencyManagement {
 	imports { 
-		mavenBom "org.springframework.cloud:spring-cloud-starter-parent:BRIXTON.RELEASE" 
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:Brixton.RELEASE" 
 	}
 }
 
 
 eclipse {
-    classpath {
-         containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
-         containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
-    }
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '2.3'
+	classpath {
+		 containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
+		 containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
+	}
 }
