--- a/zipkin-server/build.gradle
+++ b/zipkin-server/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'eclipse'
 apply plugin: 'spring-boot' 
 
 jar {
-	baseName = 'demo'
+	baseName = 'zipkin-server'
 	version = '0.0.1-SNAPSHOT'
 }
 sourceCompatibility = 1.8
@@ -27,8 +27,15 @@ repositories {
 
 
 dependencies {
+	compile("org.springframework.amqp:spring-rabbit:1.4.5.RELEASE")
 	compile('org.springframework.boot:spring-boot-starter')
+	compile('org.springframework.cloud:spring-cloud-sleuth-zipkin-stream')
+	compile('org.springframework.cloud:spring-cloud-sleuth-stream')
+	compile('org.springframework.cloud:spring-cloud-stream-binder-rabbit')
+	compile("org.springframework.boot:spring-boot-starter-jdbc")
 	compile('io.zipkin.java:zipkin-server')
+	compile('mysql:mysql-connector-java')
+	compile('com.h2database:h2')
 	testCompile('org.springframework.boot:spring-boot-starter-test') 
 }
 
