config server that runs locally.  not for deployment to PWS though.

--- a/config-server/build.gradle
+++ b/config-server/build.gradle
@@ -1,13 +1,13 @@
 buildscript {
     ext {
-        springBootVersion = '1.2.5.RELEASE'
+        springBootVersion = '1.2.8.RELEASE'
     }
     repositories {
         mavenCentral()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") 
-        classpath("io.spring.gradle:dependency-management-plugin:0.5.2.RELEASE")
+        classpath("io.spring.gradle:dependency-management-plugin:0.5.3.RELEASE")
     }
 }
 
@@ -18,7 +18,7 @@ apply plugin: 'spring-boot'
 apply plugin: 'io.spring.dependency-management' 
 
 jar {
-    baseName = 'ConfigServer'
+    baseName = 'config-server'
     version = '0.0.1-SNAPSHOT'
 }
 sourceCompatibility = 1.8
