--- a/registry-server/build.gradle
+++ b/registry-server/build.gradle
@@ -1,13 +1,13 @@
 buildscript {
     ext {
-        springBootVersion = '1.2.8.RELEASE'
+        springBootVersion = '1.3.5.RELEASE'
     }
     repositories {
         mavenCentral()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") 
-        classpath("io.spring.gradle:dependency-management-plugin:0.5.2.RELEASE")
+        classpath("io.spring.gradle:dependency-management-plugin:0.5.3.RELEASE")
     }
 }
 
@@ -18,7 +18,7 @@ apply plugin: 'spring-boot'
 apply plugin: 'io.spring.dependency-management' 
 
 jar {
-    baseName = 'simulator-registry'
+    baseName = 'registry-server'
     version = '0.0.1-SNAPSHOT'
 }
 sourceCompatibility = 1.8
@@ -30,13 +30,13 @@ repositories {
 
 
 dependencies {
-    compile("org.springframework.cloud:spring-cloud-starter-eureka-server")
+	compile("org.springframework.cloud:spring-cloud-starter-eureka-server")
     testCompile("org.springframework.boot:spring-boot-starter-test") 
 }
 
 dependencyManagement {
 	imports { 
-		mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Angel.SR6" 
+		mavenBom "org.springframework.cloud:spring-cloud-starter-parent:Brixton.RELEASE" 
 	}
 }
 
