--- a/config/dealer-service.yml
+++ b/config/dealer-service.yml
@@ -13,7 +13,7 @@ dealer:
 eureka:
   client:
     serviceUrl:
-      defaultZone: ${vcap.services.service-registry.credentials.uri:http://127.0.0.1:8761}/eureka/
+      defaultZone: http://${vcap.services.service-registry.credentials.uri:127.0.0.1:8761}/eureka/
 
 ---
 spring:
