--- a/config/dealer-service.yml
+++ b/config/dealer-service.yml
@@ -12,8 +12,17 @@ dealer:
 
 eureka:
   client:
-    serviceUrl:
-      defaultZone: http://${vcap.services.service-registry.credentials.uri:127.0.0.1:8761}/eureka/
+    service-url:
+      defaultZone: http://127.0.0.1:8761/eureka/
+
+---
+spring:
+  profiles: cloud
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://simulator-registry.cfapps.io/eureka/
 
 ---
 spring:
