--- a/config/dealer-service.yml
+++ b/config/dealer-service.yml
@@ -13,8 +13,10 @@ dealer:
 eureka:
   client:
     service-url:
-      defaultZone: http://127.0.0.1:8761/eureka/
+      defaultZone: ${vcap.services.service-registry.credentials.uri:http://localhost:8761}/eureka/
 
+# This cloud profile only needed until the eureka config above works or the registry server
+# is no longer needed
 ---
 spring:
   profiles: cloud
