--- a/config/repair-service.yml
+++ b/config/repair-service.yml
@@ -1,3 +1,19 @@
+eureka:
+  client:
+    service-url:
+      defaultZone: ${vcap.services.service-registry.credentials.uri:http://localhost:8761}/eureka/
+
+# This cloud profile only needed until the eureka config above works or the registry server
+# is no longer needed
+---
+spring:
+  profiles: cloud
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://simulator-registry.cfapps.io/eureka/
+
 ---
 spring:
   profiles: development
