Updates for services and zipkin interaction

--- a/auto-simulator/src/main/resources/application.yml
+++ b/auto-simulator/src/main/resources/application.yml
@@ -1,7 +1,22 @@
 spring:
   application:
     name: ${vcap.application.name:auto-simulator}
+  sleuth:
+    hystrix:
+      strategy.enabled: false    
         
 security:
   basic:
     enabled: false  
+    
+hystrix:
+  command:
+    default:    
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 10000
+
+logging:
+  level:
+    com.launchdarkly: TRACE            
