--- a/dealer-service/src/main/resources/application.yml
+++ b/dealer-service/src/main/resources/application.yml
@@ -1,7 +1,21 @@
 spring:
   application:
     name: ${vcap.application.name:dealer-service}
+  sleuth:
+    hystrix:
+      strategy.enabled: false
+      
+hystrix:
+  command:
+    default:    
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 10000
 
 security:
   basic:
     enabled: false
+  
+            
+
