--- a/repair-service/src/main/resources/application.yml
+++ b/repair-service/src/main/resources/application.yml
@@ -1,7 +1,18 @@
 spring:
   application:
     name: ${vcap.application.name:repair-service}
+  sleuth:
+    hystrix:
+      strategy.enabled: false    
 
+hystrix:
+  command:
+    default:    
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 10000
+      
 security:
   basic:
     enabled: false
