--- a/repair-service/build.gradle
+++ b/repair-service/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '1.2.6.RELEASE'
+        springBootVersion = '1.3.5.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -34,20 +34,26 @@ repositories {
 	maven { url "https://repo.spring.io/libs-snapshot" }
 }
 
-
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
 	compile("org.springframework.boot:spring-boot-starter-actuator")
-	compile("io.pivotal.spring.cloud:spring-cloud-services-starter-config-client")
-	compile("io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry")
+	compile("org.springframework.boot:spring-boot-starter-aop")
+	compile("org.springframework.cloud:spring-cloud-starter-feign")
+	compile("org.springframework.cloud:spring-cloud-starter-eureka")
+	compile("org.springframework.cloud:spring-cloud-starter-config")
+	compile("org.springframework.cloud:spring-cloud-sleuth-stream")
+	compile('org.springframework.cloud:spring-cloud-stream-binder-rabbit')
+	compile("io.pivotal.spring.cloud:spring-cloud-services-starter-config-client:1.1.0.M5")
+	compile('io.pivotal.spring.cloud:spring-cloud-services-cloudfoundry-connector:1.1.0.M5')
+	compile('io.pivotal.spring.cloud:spring-cloud-services-spring-connector:1.1.0.M5')
+	compile('io.pivotal.spring.cloud:cloudfoundry-certificate-truster:1.0.1.RELEASE')
 	compile("com.google.code.gson:gson:2.3.1")
 	testCompile("org.springframework.boot:spring-boot-starter-test")
-	
 }
 
 dependencyManagement {
 	imports {
-	  mavenBom "io.pivotal.spring.cloud:spring-cloud-services-starter-parent:1.0.2.RELEASE"
+	  mavenBom 'org.springframework.cloud:spring-cloud-starter-parent:Brixton.RELEASE'
 	}
 }
 
