--- a/auto-simulator/build.gradle
+++ b/auto-simulator/build.gradle
@@ -4,20 +4,15 @@ buildscript {
     }
     repositories {
         mavenCentral()
-		maven { url 'http://repo.spring.io/milestone' }
-		maven { url 'http://repo.spring.io/snapshot' }
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") 
-        classpath("io.spring.gradle:dependency-management-plugin:0.5.3.RELEASE")
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") 
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
-apply plugin: 'idea'
 apply plugin: 'spring-boot' 
-apply plugin: 'io.spring.dependency-management' 
 
 jar {
     baseName = 'auto-simulator'
@@ -32,35 +27,30 @@ dependencyManagement {
 
 repositories {
     mavenCentral()
-	maven { url 'http://repo.spring.io/milestone' }
-	maven { url 'http://repo.spring.io/snapshot' }
-	maven { url "https://repo.spring.io/libs-snapshot" }
+	maven { url 'https://repo.spring.io/libs-snapshot' }
 }
 
 dependencies {
-	compile("org.springframework.amqp:spring-rabbit:1.4.5.RELEASE")
 	compile("org.springframework.boot:spring-boot-starter-web")
 	compile("org.springframework.boot:spring-boot-starter-actuator")
 	compile("org.springframework.boot:spring-boot-starter-aop")
 	compile("org.springframework.cloud:spring-cloud-starter-feign")
-	compile("org.springframework.cloud:spring-cloud-starter-eureka")
-	compile("org.springframework.cloud:spring-cloud-starter-hystrix")
-	compile("org.springframework.cloud:spring-cloud-netflix-hystrix-amqp:1.0.3.RELEASE")
-	compile("org.springframework.cloud:spring-cloud-starter-config")
 	compile("org.springframework.cloud:spring-cloud-sleuth-stream")
+	compile('org.springframework.boot:spring-boot-starter-cloud-connectors')
 	compile('org.springframework.cloud:spring-cloud-stream-binder-rabbit')
-	compile("io.pivotal.spring.cloud:spring-cloud-services-starter-config-client:1.1.0.M5")
-	compile('io.pivotal.spring.cloud:spring-cloud-services-cloudfoundry-connector:1.1.0.M5')
-	compile('io.pivotal.spring.cloud:spring-cloud-services-spring-connector:1.1.0.M5')
-	compile('io.pivotal.spring.cloud:cloudfoundry-certificate-truster:1.0.1.RELEASE')
+//	compile("io.pivotal.spring.cloud:spring-cloud-services-starter-circuit-breaker")
+	compile("io.pivotal.spring.cloud:spring-cloud-services-starter-config-client")
+	compile("io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry")
+	compile('io.pivotal.spring.cloud:cloudfoundry-certificate-truster')
 	compile("com.google.code.gson:gson:2.3.1")
-	compile("com.launchdarkly:launchdarkly-client:1.0.1")
 	testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
 dependencyManagement {
 	imports {
-	  mavenBom 'org.springframework.cloud:spring-cloud-starter-parent:Brixton.RELEASE'
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:Brixton.SR1" 
+		mavenBom "io.pivotal.spring.cloud:spring-cloud-services-dependencies:1.1.0.RELEASE"
+		
 	}
 }
 
