--- a/dealer-service/src/main/resources/application.yml
+++ b/dealer-service/src/main/resources/application.yml
@@ -4,6 +4,8 @@ spring:
   sleuth:
     hystrix:
       strategy.enabled: false
+  zipkin:
+    base-url: http://localhost:9411
       
 hystrix:
   command:
