--- a/places-service/build.gradle
+++ b/places-service/build.gradle
@@ -8,8 +8,7 @@ buildscript {
 		maven { url 'http://repo.spring.io/snapshot' }
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.5.RELEASE")
-        classpath("io.spring.gradle:dependency-management-plugin:0.5.3.RELEASE")
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") 
     }
 }
 
@@ -36,21 +35,19 @@ dependencies {
 	compile("org.springframework.boot:spring-boot-starter-actuator")
 	compile("org.springframework.boot:spring-boot-starter-aop")
 	compile("org.springframework.cloud:spring-cloud-starter-feign")
-	compile("org.springframework.cloud:spring-cloud-starter-eureka")
-	compile("org.springframework.cloud:spring-cloud-starter-config")
 	compile("org.springframework.cloud:spring-cloud-sleuth-stream")
 	compile('org.springframework.cloud:spring-cloud-stream-binder-rabbit')
-	compile("io.pivotal.spring.cloud:spring-cloud-services-starter-config-client:1.1.0.M5")
-	compile('io.pivotal.spring.cloud:spring-cloud-services-cloudfoundry-connector:1.1.0.M5')
-	compile('io.pivotal.spring.cloud:spring-cloud-services-spring-connector:1.1.0.M5')
-	compile('io.pivotal.spring.cloud:cloudfoundry-certificate-truster:1.0.1.RELEASE')
+	compile("io.pivotal.spring.cloud:spring-cloud-services-starter-config-client")
+	compile("io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry")
+	compile('io.pivotal.spring.cloud:cloudfoundry-certificate-truster')
 	compile("com.google.code.gson:gson:2.3.1")
 	testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
 dependencyManagement {
 	imports {
-	  mavenBom 'org.springframework.cloud:spring-cloud-starter-parent:Brixton.RELEASE'
+	  mavenBom 'org.springframework.cloud:spring-cloud-starter-parent:Brixton.SR1'
+	  mavenBom "io.pivotal.spring.cloud:spring-cloud-services-dependencies:1.1.0.RELEASE"
 	}
 }
 
