--- a/dealer-service/src/main/resources/application.yml
+++ b/dealer-service/src/main/resources/application.yml
@@ -1,23 +1,19 @@
 spring:
   application:
     name: ${vcap.application.name:dealer-service}
+  rabbitmq:
+    host: ${RABBIT_HOST:localhost}    
   sleuth:
-    hystrix:
-      strategy.enabled: false
-  zipkin:
-    base-url: http://localhost:9411
-      
-hystrix:
-  command:
-    default:    
-      execution:
-        isolation:
-          thread:
-            timeoutInMilliseconds: 10000
+    sampler:
+      percentage: 1    
 
 security:
   basic:
-    enabled: false
-  
+    enabled: false  
+       
+feign:
+  hystrix:
+    enabled: false     
             
-
+logging:
+  file: /Users/cjohnson/Documents/demo-workspace/dealer-service.log
