--- a/gas-price-service/build.gradle
+++ b/gas-price-service/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '1.3.5.RELEASE'
+        springBootVersion = '1.4.7.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -12,7 +12,7 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
-apply plugin: 'spring-boot' 
+apply plugin: 'org.springframework.boot' 
 
 jar {
     baseName = 'gas-price-service'
@@ -21,37 +21,28 @@ jar {
 
 repositories {
     mavenCentral()
-	maven { url 'https://repo.spring.io/libs-snapshot' }
 }
 
+ext {
+	springCloudVersion = 'Camden.SR4'
+}
 
-dependencies {	
-	
-    compile("org.springframework.boot:spring-boot-starter-web")
+dependencies {
 	compile("org.springframework.boot:spring-boot-starter-actuator")
-	compile("org.springframework.boot:spring-boot-starter-aop")
 	compile("org.springframework.cloud:spring-cloud-starter-feign")
-	compile("org.springframework.cloud:spring-cloud-sleuth-stream")
-	compile('org.springframework.cloud:spring-cloud-stream-binder-rabbit')
+	compile('org.springframework.cloud:spring-cloud-starter-sleuth')
+	compile('org.springframework.cloud:spring-cloud-sleuth-stream')
+	compile('org.springframework.cloud:spring-cloud-starter-stream-rabbit')
 	compile("io.pivotal.spring.cloud:spring-cloud-services-starter-config-client")
 	compile("io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry")
-	compile('io.pivotal.spring.cloud:cloudfoundry-certificate-truster')
-	compile("com.google.code.gson:gson:2.3.1")
 	testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
 dependencyManagement {
 	imports {
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:Brixton.SR1" 
-		mavenBom "io.pivotal.spring.cloud:spring-cloud-services-dependencies:1.1.0.RELEASE"
-		mavenBom 'org.springframework.cloud:spring-cloud-sleuth:1.0.1.RELEASE'
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	  	mavenBom "io.pivotal.spring.cloud:spring-cloud-services-dependencies:1.4.1.RELEASE"		
 	}
 }
 
-eclipse {
-    classpath {
-         containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
-         containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
-    }
-}
 
