--- a/zipkin-server/build.gradle
+++ b/zipkin-server/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '1.3.5.RELEASE'
+		springBootVersion = '1.4.7.RELEASE'
 	}
 	repositories {
 		mavenCentral()
@@ -23,34 +23,27 @@ targetCompatibility = 1.8
 
 repositories {
 	mavenCentral()
-	maven { url 'https://repo.spring.io/libs-snapshot' }
 }
 
+ext {
+	springCloudVersion = 'Camden.SR4'
+}
 
 dependencies {
+	compile('org.springframework.boot:spring-boot-starter')
 	compile "org.springframework.cloud:spring-cloud-sleuth-zipkin-stream"
 	compile "org.springframework.cloud:spring-cloud-sleuth-zipkin"
-	compile "org.springframework.cloud:spring-cloud-stream-binder-rabbit" 
-	compile "org.springframework.boot:spring-boot-configuration-processor"
-	compile "io.zipkin.java:zipkin-autoconfigure-ui"
-	compile "io.zipkin.java:zipkin-ui"
-	compile 'org.jooq:jooq:3.8.4'
+	compile('io.zipkin.java:zipkin-autoconfigure-ui')
+	compile('org.springframework.cloud:spring-cloud-starter-stream-rabbit')
 	compile("org.springframework.boot:spring-boot-starter-jdbc")
 	compile('mysql:mysql-connector-java')
-	compile('com.h2database:h2')
-	testCompile('org.springframework.boot:spring-boot-starter-test') 
+//	compile('com.h2database:h2')
+	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
 dependencyManagement {
 	imports { 
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:Brixton.SR1" 
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
 }
 
-
-eclipse {
-	classpath {
-		 containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
-		 containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
-	}
-}
